unpackaged/main/default/objects/Opportunity/fields/AutomationBypassDateTime__c.field-meta.xml
<CustomField>
    <fullName>AutomationBypassDateTime__c</fullName>
    <description>This field to hold the automation date/time</description>
    <label>AutomationBypassDateTime</label>
    <type>DateTime</type>
</CustomField>