unpackaged/main/default/objects/Opportunity/fields/Expected_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_ARR__c</fullName>
    <label>Expected ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>