unpackaged/main/default/objects/Opportunity/fields/Greenbyte_Legacy_SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>Greenbyte_Legacy_SFDC_Id__c</fullName>
    <externalId>true</externalId>
    <label>Greenbyte Legacy SFDC Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>