unpackaged/main/default/objects/Opportunity/fields/IsAutomationBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsAutomationBypassed__c</fullName>
    <formula>AutomationBypassDateTime__c &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAutomationBypassed</label>
    <type>Checkbox</type>
</CustomField>