unpackaged/main/default/objects/Opportunity/fields/Loss_Comment__c.field-meta.xml
<CustomField>
    <fullName>Loss_Comment__c</fullName>
    <label>Loss Comment</label>
    <type>TextArea</type>
</CustomField>