unpackaged/main/default/objects/Opportunity/fields/Opportunity_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>TextArea</type>
</CustomField>