unpackaged/main/default/objects/Opportunity/fields/Opportunity_Theater__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Theater__c</fullName>
    <label>Theater</label>
    <type>TextArea</type>
</CustomField>