unpackaged/main/default/objects/Opportunity/fields/Order_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Order_Subtype__c</fullName>
    <label>Order Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Full Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>