unpackaged/main/default/objects/Opportunity/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Product Line (Cross-Sell)</fullName>
            </value>
            <value>
                <fullName>Additional Products &amp; Services (Upsell)</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>