unpackaged/main/default/objects/Opportunity/fields/Total_Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Recurring_Revenue__c</fullName>
    <label>NRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>