unpackaged/main/default/objects/Opportunity/fields/Total_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Revenue__c</fullName>
    <label>Total Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>