unpackaged/main/default/objects/Opportunity/fields/Win_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reason__c</fullName>
    <label>Win/Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Feature Requirement</fullName>
            </value>
            <value>
                <fullName>Product Scope</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>