unpackaged/main/default/objects/Opportunity/fields/Winning_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Vendor__c</fullName>
    <label>Winning Vendor</label>
    <type>TextArea</type>
</CustomField>