unpackaged/main/default/objects/Opportunity/validationRules/Closed_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

OR (
ISPICKVAL( StageName , &quot;Closed Won&quot;),
ISPICKVAL( StageName , &quot;Closed Lost&quot;)
),

$Profile.Name &lt;&gt; &quot;PF Ops&quot;,
$Profile.Name &lt;&gt; &quot;PF Legal&quot;,
$Profile.Name &lt;&gt; &quot;PF Finance&quot;,
$Profile.Name &lt;&gt; &quot;PF Super User&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;




)</errorConditionFormula>
    <errorMessage>Only certain profiles can edit the closed opportunity</errorMessage>
</ValidationRule>