unpackaged/main/default/objects/Opportunity/validationRules/Opportunity_Stage_Validation2.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Validation2</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(StageName,&quot;Closed Won&quot;),
OR(
ISPICKVAL(Finance_Review__c,&quot;Review Needed&quot;),
ISPICKVAL(Finance_Review__c,&quot;&quot;),
ISPICKVAL(Finance_Review__c,&quot;Rejected&quot;)
)
),
AND(
ISPICKVAL(Finance_Review__c,&quot;Approved&quot;),
OR(
ISPICKVAL(StageName,&quot;00 - MQL&quot;),
ISPICKVAL(StageName,&quot;0 - Identified Prospect Account&quot;),
ISPICKVAL(StageName,&quot;1 - Account Exploration&quot;),
ISPICKVAL(StageName,&quot;2 - Account Qualification&quot;),
ISPICKVAL(StageName,&quot;3 - Consideration&quot;),
ISPICKVAL(StageName,&quot;4 - Evaluation&quot;),
ISPICKVAL(StageName,&quot;5 - Verbal Commit/LOI&quot;),
ISPICKVAL(StageName,&quot;6 - Negotiations&quot;),
ISPICKVAL(StageName,&quot;7-Execution&quot;),
ISPICKVAL(StageName,&quot;Close Pending&quot;)
))
)</errorConditionFormula>
    <errorMessage>Status couldn&#39;t be changed to Closed Won (or) Finance review couldn&#39;t be set to Approved without approval.</errorMessage>
</ValidationRule>