unpackaged/main/default/objects/Opportunity/validationRules/Primary_Contact_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_field_required</fullName>
    <active>true</active>
    <description>primary contact field is required before creating opportunity</description>
    <errorConditionFormula>ISBLANK(Primary_Contact__c) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
    <errorDisplayField>Primary_Contact__c</errorDisplayField>
    <errorMessage>Primary Contact field is required</errorMessage>
</ValidationRule>